--- a/styles/index.css
+++ b/styles/index.css
@@ -8,5 +8,63 @@ body {
     border: 0;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    background-color:#e9e9e9;
 }
 
+.results {
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.results img {
+    width:19em;
+    border-radius:30px;
+    margin-top:1em;
+}
+
+.videoUnit {
+    width:21em;
+    height:30em;
+    background-color:white;
+    list-style:none;
+    padding:1em;
+    border-radius:7px;
+    overflow:hidden;
+    margin:1em;
+    text-align:center;
+}
+
+.videoTitle {
+    font-weight:bold;
+}
+
+.page-button {
+    border:none;
+    width:10em;
+    height:3em;
+    background-color:#1aa310;
+    color:white;
+    font-weight:bold;
+    font-size:1.1em;
+    border-radius:10px;
+}
+
+.submitClass input {
+    width:30em;
+    font-size:2em;
+    border-radius:7px;
+    border:none;
+    font-weight:bold;
+    padding-left:20px;
+    
+}
+
+.submitClass button {
+    width:10em;
+    border:none;
+    height:2em;
+    font-size:1.2em;
+    background-color:navy;
+    border-radius:10px;
+    color:white;
+}
