--- a/styles/index.css
+++ b/styles/index.css
@@ -3,10 +3,56 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  width: 1000px;
+  padding: 0;
+  border: 0;
+  /* text-align: center; */
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.home {
+  text-align: center;
+}
+
+.submitClass {
+  margin-bottom: 20px;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 15px;
+}
+
+#img {
+  float: left;
+  margin: 0px 20px 0px 0;
+}
+
+#title {
+  text-decoration: none;
+}
+
+h2 {
+  color: black;
+}
+
+#channelId {
+  font-size: 12px;
+}
+
+button {
+  padding: 8px 8px;
+  font-size: 12px;
+  border-radius: 5px;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.prevPageButton {
+  float: left;
+}
+
+.nextPageButton {
+  float: right;
+}
